--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,5 +7,6 @@
 <body>
 Hello!
 <a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
+or <a href="/hello?name=Serhii&surname=Cheredn">Request with parameters</a>
 </body>
 </html>
