Added Model model + calculator.html + @GetMapping("/calculator")

--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -8,5 +8,9 @@
 Hello!
 <a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
 or <a href="/hello?name=Serhii&surname=Cheredn">Request with parameters</a>
+<a href="/calculator">Calculator</a>
+
+<p th:text="${message}"/>
+
 </body>
 </html>
