Pattern Validation + Regular Expressions

--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -19,6 +19,9 @@
     <input type="text" th:field="*{email}" id="email"/>
     <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error email</div>
     <br/>
+    <input type="text" th:field="*{address}" id="address"/>
+    <div style="color: red" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Address error </div>
+    <br/>
     <input type="submit" value="Update!">
 </form>
 
